--- a/index.html
+++ b/index.html
@@ -131,13 +131,6 @@
     .name-input::placeholder {
       color: #666;
     }
-    .image-placeholder {
-      width: 100%;
-      height: 140px;
-      border-radius: 35px;
-      background: linear-gradient(180deg, #aee1ff, #e8f7ff 40%, #7cc66a 40%, #63a954);
-      margin: 12px 0 4px;
-    }
 
     /* ===== 結果頁 ===== */
     .result-top-row {
@@ -230,21 +223,53 @@
 <script>
   // ===== 1. 讀書人格 =====
   const studyTypes = [
-    { id: "S1", name: "卷王型",        description: "之後可以改成正式描述，用來介紹卷王在清大的日常。" },
-    { id: "S2", name: "死線戰士型",    description: "之後可以改成正式描述，描述那種永遠跟 dead line 談戀愛的人。" },
-    { id: "S3", name: "疑似自主休學型", description: "之後可以改成正式描述，平常消失在課堂、偶爾出沒在校園角落。" },
-    { id: "S4", name: "系館駐點型",    description: "之後可以改成正式描述，系館就是你第二個家。" }
+    {
+      id: "S1",
+      name: "卷王型",
+      description: "在學習方面，你一定低調但學業實力驚人，默默地捲死大家拿書卷。"
+    },
+    {
+      id: "S2",
+      name: "死線戰士型",
+      description: "在學習方面，無論作業什麼時候要交，你肯定會化身時間管理大師，完美地把所有事都拖到最後一刻。"
+    },
+    {
+      id: "S3",
+      name: "疑似自主休學型",
+      description: "在學習方面，你比起上學更像在度假，同學見到你的機率堪比 CSGO 出龍狙。"
+    },
+    {
+      id: "S4",
+      name: "系館駐點型",
+      description: "在學習方面，你一定幾乎天天待在系館或實驗室內，像隻研究室的小精靈，悉知系館所有資源。"
+    }
   ];
 
   // ===== 2. 生活人格 =====
   const lifeTypes = [
-    { id: "L1", name: "絕對的社交中心型", description: "之後可以改成正式描述，總是人群中的發光體。" },
-    { id: "L2", name: "倉鼠型（囤貨 king）", description: "之後可以改成正式描述，零食跟生活物資永遠滿到爆。" },
-    { id: "L3", name: "養生型", description: "之後可以改成正式描述，知道何時該休息、運動、照顧自己。" },
-    { id: "L4", name: "model 型", description: "之後可以改成正式描述，把校園當伸展台的人。" }
+    {
+      id: "L1",
+      name: "絕對的社交中心型",
+      description: "在生活方面，感覺隨便走在路上的路人都是你的朋友，系上系外活動永遠不缺席。"
+    },
+    {
+      id: "L2",
+      name: "倉鼠型（囤貨 king）",
+      description: "在生活方面，你就像擁有四次元百寶袋一樣，永遠能在囤滿零食和用品的包包及宿舍中，拿出意想不到的東西。"
+    },
+    {
+      id: "L3",
+      name: "養生型",
+      description: "在生活方面，你就像在校園裡散步的爺爺，一定非常重視飲食與運動，沒事就想逛一逛成功湖思考人生。"
+    },
+    {
+      id: "L4",
+      name: "model 型",
+      description: "在生活方面，一定沒人看過你的素顏，你是一個注重外型與形象，自信魅力兼具的人。"
+    }
   ];
 
-  // ===== 3. 對應到你給的圖片檔名 =====
+  // ===== 3. 圖片對應 =====
   const studyImages = {
     S1: "img/卷王.PNG",
     S2: "img/死線戰士.PNG",
@@ -256,21 +281,20 @@
     L1: "img/社交中心.PNG",
     L2: "img/倉鼠型.PNG",
     L3: "img/養生.PNG",
-    L4: "img/Model .PNG"   // 建議你自己可以改檔名把空白拿掉，但這裡先照你現在的檔名
+    L4: "img/Model .PNG"   // 若你改檔名，記得這裡一起改
   };
 
-  // ===== 4. 題庫：1–7 讀書題 + 8–14 生活題 =====
+  // ===== 4. 題庫：1–7 讀書 + 8–14 生活 =====
   const questions = [
-    // 讀書題 1–7
     {
       id: 1,
       category: "study",
       text: "校園夜晚最能代表你的地方？",
       options: [
         { text: "一定是夜讀區、圖書館、在系館演習課留下來問問題到十點", type: "S1" },
-        { text: "有插座的地方就是我的家。圖書館、系 K、或任何還亮著燈的教室", type: "S2" },
+        { text: "有插座的地方就是我的家。圖書館、系K、或任何還亮著燈的教室", type: "S2" },
         { text: "宿舍、小吃部、成功湖旁邊，反正不是演習課", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "系館的實驗室、系辦或空教室", type: "S4" }
       ]
     },
     {
@@ -281,7 +305,7 @@
         { text: "簡單務實、有剪就好", type: "S1" },
         { text: "快轉＋手持晃動＋手機低電量警告一直跳出來那種", type: "S2" },
         { text: "Discovery 頻道，大多時間在宿舍廢，如果你運氣好才會捕捉到我覓食的鏡頭", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "紀錄片風格，單一角度拍攝的縮時攝影呈現在同個地點的忙碌過程和吃喝拉撒", type: "S4" }
       ]
     },
     {
@@ -292,7 +316,7 @@
         { text: "看來本週又要當夜讀區門神了", type: "S1" },
         { text: "太好了，下週的我會處理", type: "S2" },
         { text: "根本不知道有這回事，急忙寫信問助教分組情況", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "一下課直接把好友抓到系辦開始討論，並在隔天就交出成果以及好友的乾屍", type: "S4" }
       ]
     },
     {
@@ -303,18 +327,18 @@
         { text: "每堂課都有到結果期中考考輸翹課仔", type: "S1" },
         { text: "eclass 代辦事項忽然看到一份作業死線是明天，結果朋友說：這份作業其實三週前就公告了", type: "S2" },
         { text: "平常都沒去上課，結果某次考試後充電線丟在教室，但下次考試又是 3 週後", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "系館販賣機空無一物，研究室還沒有存糧，跑去小吃部 7-11 買了泡麵還發現戲館停水", type: "S4" }
       ]
     },
     {
       id: 5,
       category: "study",
-      text: "老師上課突然說：「這週末系上有學術活動，可以加平時分 5 分。」你的反應是？",
+      text: "老師上課突然說：『這週末系上有學術活動，可以加平時分 5 分。』你的反應是？",
       options: [
         { text: "速速報名！！！！！！！！！！！", type: "S1" },
         { text: "我想去，但我還有三份作業也是這週末死線", type: "S2" },
         { text: "從朋友那聽來二手消息，並在朋友苦口婆心的勸說下，還是報名了以防被當", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "參加那些活動早就是日常，反正不就是從社辦出來走兩步就到了嗎", type: "S4" }
       ]
     },
     {
@@ -325,7 +349,7 @@
         { text: "對不起小木屋鬆餅，但英文課會點名我不能不去", type: "S1" },
         { text: "看看手錶，十分鐘可以來回，然後化身音速小子衝過去拿披薩，再回來補簽到跟作業", type: "S2" },
         { text: "慢慢從宿舍飄過去，拿完飲料跟食物後再慢慢飄回宿舍，邊吃邊追劇", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "call 系學會學弟幫你領然後放在系辦，下課後回去悠閒開吃", type: "S4" }
       ]
     },
     {
@@ -334,13 +358,11 @@
       text: "在微積分課上，老師突然提醒同學今天是課程諮詢表單填寫到期日，但你手機剛好沒電了怎麼辦？",
       options: [
         { text: "不緊張，我上課還會帶平板或筆電，而且微積分教授教超好我每個都給他 5 分", type: "S1" },
-        { text: "衝去借充電器，一邊充一邊禱告表單不要準時關", type: "S2" },
+        { text: "衝去借充電器，一邊充一邊禱告表單不要準時關。", type: "S2" },
         { text: "沒去上課的我根本不知道這回事，直到晃回房間手機插上電後，看到了訊息心裡想：我都沒去上課有資格填嗎（？", type: "S3" },
-        { text: "暫無", type: "S4" }
+        { text: "生活用品都在系辦的我，此時開始坐地起價，充電器一條每分鐘 5 塊錢嘿", type: "S4" }
       ]
     },
-
-    // 生活題 8–14
     {
       id: 8,
       category: "life",
@@ -348,7 +370,7 @@
       options: [
         { text: "手機錢包鑰匙等等生活必需品", type: "L1" },
         { text: "小零食、衛生紙、等等要買零食所以帶的錢包", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "裝滿熱水的保溫杯、小毛巾、眼鏡盒", type: "L3" },
         { text: "補妝包、香水、小鏡子、行動電源，還有為了拍照準備的隨身小道具", type: "L4" }
       ]
     },
@@ -357,9 +379,9 @@
       category: "life",
       text: "如果明天早八在遠得要死的台積館，你會怎麼安排？",
       options: [
-        { text: "請朋友 7:30 的的時候打電話給我叫我起床", type: "L1" },
+        { text: "請朋友 7:30 的時候打電話給我叫我起床", type: "L1" },
         { text: "想在房間 cos 蛋黃哥：不想上班～但又怕被當，所以乖乖訂了個 7:30 的鬧鐘並帶好明天早餐", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "前一天晚上 11 點前睡，隔天 6 點起，慢慢享用早餐，再繞去梅園走走，然後 7:30 早早到教室泡咖啡", type: "L3" },
         { text: "前一天先規劃好穿搭，提早出門順便拍個晨光校園照，當作今天的第一張 OOTD", type: "L4" }
       ]
     },
@@ -368,9 +390,9 @@
       category: "life",
       text: "下午突然下大雨，本來講好要出門，你會？",
       options: [
-        { text: "請朋友 7:30 的的時候打電話給我叫我起床（※如果之後想改可以改文字）", type: "L1" },
+        { text: "打電話問朋友今天要不要改成在宿舍或交誼廳聊天聚會", type: "L1" },
         { text: "水喔，有理由不出門了哇哈哈，在床上繼續吃零食看動漫", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "想說雨天出門可能感冒，所以決定改期或改約室內休閒活動", type: "L3" },
         { text: "如果雨很有氛圍，我會撐傘照樣出門順便拍雨景；如果雨太醜，影響我的發揮，我就改約室內咖啡廳", type: "L4" }
       ]
     },
@@ -381,7 +403,7 @@
       options: [
         { text: "宿舍交誼廳、小吃部，反正不在房間也不在圖書館", type: "L1" },
         { text: "宿舍房間、宿舍販賣機前、小吃部、水木餐廳、風雲樓", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "體育館、操場或健身房", type: "L3" },
         { text: "滲透的光、相襯的樹、具有設計感的地方，像是成功湖、大草皮、好看的秘密小徑", type: "L4" }
       ]
     },
@@ -390,9 +412,9 @@
       category: "life",
       text: "你出門的速度通常是？",
       options: [
-        { text: "起床整理一下儀容，穿件能看的衣服即可", type: "L1" },
+        { text: "起床整理一下儀容，穿件能看的衣服就出門", type: "L1" },
         { text: "拖拖拉拉，根本不想下床，大概哀個 30 分鐘後出門", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "提早起床準備，慢慢悠悠準備，反正起得早根本不著急", type: "L3" },
         { text: "十分鐘出得了門，但可能會再用二十分鐘確認造型有沒有問題", type: "L4" }
       ]
     },
@@ -403,7 +425,7 @@
       options: [
         { text: "跟朋友一起去大草坪野餐、去巨城逛街、探索比清大有趣的地方", type: "L1" },
         { text: "Costco、大全聯、宿舍床上、不然就是回家了", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "成功湖散步、大草皮曬日光浴、健身房或操場運動、或者回家休息", type: "L3" },
         { text: "咖啡廳、選物店、市區拍照，或是在校園找新的拍照點", type: "L4" }
       ]
     },
@@ -414,7 +436,7 @@
       options: [
         { text: "雖然洗好澡了但我也很想一起去 QAQ 叫朋友幫忙外帶回來然後我負責帶桌遊或想聊天話題", type: "L1" },
         { text: "能幫我帶嗎，我不想出門，跑路費給你 10 元，不要的話我吃我自己的餅乾", type: "L2" },
-        { text: "暫無", type: "L3" },
+        { text: "萬事萬物，睡覺為大，睡眠品質很重要，況且吃宵夜對身體不好", type: "L3" },
         { text: "我會先問：『有人要幫我拍照嗎？』如果有，我立刻畫個淡妝並換衣服出門；沒有，我就裝睡", type: "L4" }
       ]
     }
@@ -422,7 +444,7 @@
 
   // ===== 5. 狀態 =====
   let currentIndex = 0;
-  const answers = []; // 每題選了哪一個 type
+  const answers = [];
   const studyScore = { S1: 0, S2: 0, S3: 0, S4: 0 };
   const lifeScore  = { L1: 0, L2: 0, L3: 0, L4: 0 };
   let userName = "";
@@ -445,8 +467,8 @@
   function startQuiz() {
     currentIndex = 0;
     answers.length = 0;
-    for (let key in studyScore) studyScore[key] = 0;
-    for (let key in lifeScore) lifeScore[key] = 0;
+    for (let k in studyScore) studyScore[k] = 0;
+    for (let k in lifeScore) lifeScore[k] = 0;
     userName = "";
     renderQuestion();
   }
@@ -458,7 +480,7 @@
     const currentNo = currentIndex + 1;
 
     let optionsHtml = "";
-    q.options.forEach((opt) => {
+    q.options.forEach(opt => {
       const isSelected = answers[currentIndex] === opt.type;
       optionsHtml += `
         <label class="option-pill ${isSelected ? "selected" : ""}" onclick="selectOption('${opt.type}')">
@@ -509,7 +531,7 @@
     }
   }
 
-  // ===== 輸入名字頁 =====
+  // ===== 輸入名字頁（已移除圖片） =====
   function renderNameScreen() {
     screen.innerHTML = `
       <div class="question-layout">
@@ -526,7 +548,6 @@
           value="${userName}"
           oninput="userName = this.value"
         >
-        <div class="image-placeholder"></div>
         <button style="width:100%;margin-top:10px;" onclick="calcResult()">
           生成測驗結果
         </button>
@@ -539,33 +560,27 @@
 
   // ===== 計算結果 =====
   function calcResult() {
-    for (let key in studyScore) studyScore[key] = 0;
-    for (let key in lifeScore) lifeScore[key] = 0;
+    for (let k in studyScore) studyScore[k] = 0;
+    for (let k in lifeScore) lifeScore[k] = 0;
 
     questions.forEach((q, idx) => {
-      const pickedType = answers[idx];
-      if (!pickedType) return;
-      if (q.category === "study" && studyScore[pickedType] !== undefined) {
-        studyScore[pickedType] += 1;
-      } else if (q.category === "life" && lifeScore[pickedType] !== undefined) {
-        lifeScore[pickedType] += 1;
+      const picked = answers[idx];
+      if (!picked) return;
+      if (q.category === "study" && studyScore[picked] !== undefined) {
+        studyScore[picked] += 1;
+      } else if (q.category === "life" && lifeScore[picked] !== undefined) {
+        lifeScore[picked] += 1;
       }
     });
 
-    // 找分數最高的讀書人格
     let bestStudy = studyTypes[0];
     studyTypes.forEach(t => {
-      if (studyScore[t.id] > studyScore[bestStudy.id]) {
-        bestStudy = t;
-      }
+      if (studyScore[t.id] > studyScore[bestStudy.id]) bestStudy = t;
     });
 
-    // 找分數最高的生活人格
     let bestLife = lifeTypes[0];
     lifeTypes.forEach(t => {
-      if (lifeScore[t.id] > lifeScore[bestLife.id]) {
-        bestLife = t;
-      }
+      if (lifeScore[t.id] > lifeScore[bestLife.id]) bestLife = t;
     });
 
     renderResult(bestStudy, bestLife);
@@ -589,12 +604,8 @@
           <div class="result-type-pill">
             讀書：${bestStudy.name}　×　生活：${bestLife.name}
           </div>
-          <p style="margin-top:4px;">
-            ${bestStudy.description}
-          </p>
-          <p style="margin-top:2px;">
-            ${bestLife.description}
-          </p>
+          <p style="margin-top:4px;">${bestStudy.description}</p>
+          <p style="margin-top:2px;">${bestLife.description}</p>
 
           <div class="result-images-row">
             <div class="result-img-box">
@@ -609,7 +620,7 @@
           </div>
 
           <div class="result-bottom-pill">
-            之後可以把這裡改成一句屬於這個組合的 Slogan ✨
+            此測驗純屬娛樂，不會記錄個人資料
           </div>
         </div>
 
