--- a/index.html
+++ b/index.html
@@ -620,13 +620,13 @@
           </div>
 
           <div class="result-bottom-pill">
-            之後可以把這裡改成屬於這個組合的一句 Slogan ✨
+            此測驗純屬娛樂，不會記錄個人資料
           </div>
         </div>
 
         <div class="result-actions">
           <button onclick="saveResultImage()">儲存圖片</button>
-          <button onclick="alert('之後可以接分享連結，目前先在清大同學之間自己貼網址就好 😆')">分享</button>
+          <button onclick="alert('暫無此功能，還在研究中😅')">分享</button>
         </div>
       </div>
     `;
@@ -680,3 +680,4 @@
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
+
