--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         <input
           class="name-input"
           type="text"
-          placeholder="例如：柏輝、學號、暱稱都可以"
+          placeholder="例如：本名、學號、暱稱都可以"
           value="${userName}"
           oninput="userName = this.value"
         >
@@ -680,4 +680,5 @@
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
+
 
